Bug 255459 - No error message when copying a folder into a shared folder
Summary: No error message when copying a folder into a shared folder
Status: CLOSED FIXED
Alias: None
Product: KMail Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-10-28 00:09 UTC by Sabine Faure
Modified: 2010-12-02 18:37 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2010-10-28 00:09:55 UTC
Version:           unspecified (using Devel) 
OS:                Linux

If the user tries to copy a folder into a shared folder it does not work but there is no error message like there is in the desktop version.

Reproducible: Always

Steps to Reproduce:
- Launch Kmail-mobile
- Click on your Imap account inbox
- Click on a folder
- Open the 'Actions' tab
- Click on 'Edit'
- Click on 'Copy Folder To...'
- Click on the 'Local Folders' button and select a shared folder from the list
- Click on 'Ok'

Actual Results:  
The folder does not get copied into the selected shared folder.

Expected Results:  
The folder should not get copied as it is already the case.

However, there should be an error message saying something like this: 'Error while uploading folder. An attempt to create the requested folder failed'.

This way the user will be aware that it is not an action that is allowed.

N900, 4:4.6~20101026.1190044-1maemo1.1189579
Comment 1 Tobias Koenig 2010-11-30 13:10:54 UTC
SVN commit 1202310 by tokoe:

Show only collections in the 'Move to...' and 'Copy to...' dialog
that really support creating new collections/items.

BUG: 255459


 M  +6 -0      standardactionmanager.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1202310
Comment 2 Sabine Faure 2010-12-02 18:37:35 UTC
It is corrected now.

The shared folders are not listed anymore in the 'select' dialogue which prevent the user to select them so I am closing this bug.