Show only collections in the 'Move to...' and 'Copy to...' dialog that really support creating new collections/items.

BUG: 255459

svn path=/trunk/KDE/kdepimlibs/; revision=1202310